--- a/DynamicsCRMAutotesting/packages.config
+++ b/DynamicsCRMAutotesting/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoItX.Dotnet" version="3.3.14.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.8.1" targetFramework="net45" />
   <package id="Selenium.Chrome.WebDriver" version="2.31" targetFramework="net45" />
   <package id="Selenium.Support" version="3.5.2" targetFramework="net45" />
