--- a/DynamicsCRMAutotesting/packages.config
+++ b/DynamicsCRMAutotesting/packages.config
@@ -1,8 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoItX.Dotnet" version="3.3.14.2" targetFramework="net45" />
+  <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.8.1" targetFramework="net45" />
+  <package id="NUnit.Console" version="3.7.0" targetFramework="net45" />
+  <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net45" />
+  <package id="ReportGenerator" version="3.0.0" targetFramework="net45" />
+  <package id="ReportUnit" version="1.2.1" targetFramework="net45" />
   <package id="Selenium.Chrome.WebDriver" version="2.31" targetFramework="net45" />
   <package id="Selenium.Support" version="3.5.2" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.5.2" targetFramework="net45" />
